--- a/themes/compro_theme/sass/drupal/_node.scss
+++ b/themes/compro_theme/sass/drupal/_node.scss
@@ -35,6 +35,10 @@
         object-fit: cover;
         object-position: 0 90%;
         width: 100%;
+
+        @media screen and(max-width: 940px) {
+          visibility: visible;
+        }
       }
 
     }
